[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.1
text = "Space Shooter"
align = 1
valign = 1
uppercase = true

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -100.0
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -100.0
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitAccept" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -100.0
margin_top = -25.0
margin_bottom = 25.0
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitDecline" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -100.0
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="QuitAccept" to="." method="_on_QuitAccept_pressed"]
[connection signal="pressed" from="QuitDecline" to="." method="_on_QuitDecline_pressed"]
[connection signal="pressed" from="ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
